<resources>
    <string name="app_name">FikarNot</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="country_code_india">+91</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">TEMP</string>
    <string name="relaxed">relaxed</string>
    <string name="app_description">A Password Manager Tool\nVersion 1.0</string>
    <string name="copyright">Copyright © 2021 FikarNot</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="loyalty">loyalty</string>
    <string name="mall">mall</string>
    <string name="grass">grass</string>
    <string name="pin_protected">Pin Protected</string>
    <string name="l">L</string>
    <string name="o">O</string>
    <string name="c">C</string>
    <string name="k">K</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="logo_log_out">logo_log_out</string>
    <string name="logo_backspace">logo_backspace</string>
    <string name="app_icon_splash">app_icon_splash</string>
    <string name="username">Username</string>
    <string name="password_logo">password_logo</string>
    <string name="username_logo">username_logo</string>
    <string name="title">Title</string>
    <string name="title_logo">title_logo</string>
    <string name="cancel_logo">cancel_logo</string>
    <string name="add_account">Add account</string>
    <string name="public_off">public_off</string>
    <string name="drawer_logo">drawer_logo</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="from">FROM :</string>
    <string name="name">Name</string>
    <string name="to">TO : FikarNot</string>
    <string name="write_a_message">Write a message</string>
    <string name="send">SEND</string>
    <string name="sorry_nothing_found">Sorry! Nothing found</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="app_description_fragment">Simple and Secure password managing platform</string>
    <string name="_91">+91</string>
    <string name="continue_authentication">Continue</string>
    <string name="try_to_reload">Try to Reload!</string>
    <string name="sorry_not_available">Sorry! Not Available</string>
    <string name="loading">Loading</string>
    <string name="submit">Submit</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="change_mobile_number">Change Mobile number</string>
    <string name="verification_code_otp_has_been_sent_to">Verification code (OTP) has been sent to</string>
    <string name="a_password_manager_tool_fikarnot">A password manager tool (FikarNot)</string>
    <string name="product_image">product_image</string>
    <string name="price">PRICE :</string>
    <string name="update_name">Update Name</string>
    <string name="browse">Browse</string>
    <string name="remove">Remove</string>
    <string name="profile_pic">Profile_pic</string>
    <string name="next">next</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="copy_logo">copy_logo</string>
    <string name="open_in_a_browser">Open in a Browser</string>
    <string name="share_link">Share link</string>
    <string name="or">OR</string>
    <string name="just_a_sec">Just a sec..</string>
    <string name="product_description">Product description</string>
    <string name="shocking">shocking</string>
</resources>
