<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#63050505">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_mall"
            android:contentDescription="@string/public_off" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/product_description"
            android:textSize="20sp"
            android:paddingHorizontal="2dp"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/dismiss1"
            android:layout_width="46dp"
            android:layout_height="40dp"
            android:paddingHorizontal="6dp"
            android:background="@drawable/cancel_button"
            android:src="@drawable/ic_cancel"
            android:contentDescription="@string/cancel_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="20"
        android:padding="15dp"/>

    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_in_a_browser"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center" />


    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_link"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>