<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textStyle="bold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/myName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="7"
        android:hint="@string/write_a_message"
        android:gravity="top"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/colorWhite"
        android:background="@drawable/transparent_edittext"
        android:padding="10dp"
        android:layout_marginTop="15dp" />
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/positive_button"
        android:layout_gravity="end"
        android:layout_marginTop="15dp" />



</LinearLayout>