<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#63050505">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_public_off"
            android:contentDescription="@string/public_off" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:maxLines="1"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/dismiss"
            android:layout_width="46dp"
            android:layout_height="40dp"
            android:paddingHorizontal="6dp"
            android:background="@drawable/cancel_button"
            android:src="@drawable/ic_cancel"
            android:contentDescription="@string/cancel_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_username"
            android:contentDescription="@string/username_logo" />
        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/username_logo"
            android:paddingHorizontal="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/copy_username"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy_logo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:background="#A5A3A3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="50dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_password"
            android:contentDescription="@string/password_logo" />
        <TextView
            android:id="@+id/passwordTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/password"
            android:paddingHorizontal="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/copy_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy_logo" />
    </LinearLayout>


</LinearLayout>