<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorGreyLight"
    android:paddingHorizontal="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:background="@drawable/black_box_transparent"
            android:src="@mipmap/default_avatar_profile_icon"
            android:contentDescription="@string/profile_pic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/negative_button"
                android:textAllCaps="false" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorTransparent"/>
            <Button
                android:id="@+id/browse1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/transparent_button"
                android:textAllCaps="false" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorTransparent"/>
            <Button
                android:id="@+id/update_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/positive_button"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edittext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="text"
            android:paddingHorizontal="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_name"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/positive_button"/>

</LinearLayout>