<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="5dp"
    android:background="@drawable/round_corners_transparent_with_selector"
    android:paddingHorizontal="3dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/account_bg">

        <TextView
            android:id="@+id/prefix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@color/HeaderColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/username"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />


    </LinearLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_next"
        android:contentDescription="@string/next" />



</LinearLayout>